# amcl2

./: README.md
amcl/src/amcl/sensors/: amcl_laser.cpp
amcl_ros/: CMakeLists.txt  package.xml
amcl_ros/cfg/: AMCL.cfg  Amcl.cfg  AmclLaser.cfg
amcl_ros/include/amcl_ros/: amcl_laser_wrapper.h  amcl_map_wrapper.h  amcl_wrapper.h
amcl_ros/src/: amcl_laser_wrapper.cpp  amcl_map_wrapper.cpp  amcl_node.cpp  amcl_wrapper.cpp
amcl_ros/test/: basic_localization_stage.xml  global_localization_stage.xml  rosie_multilaser.xml  set_initial_pose.xml  small_loop_crazy_driving_prg.xml  small_loop_crazy_driving_prg_corrected.xml  small_loop_prf.xml  texas_greenroom_loop.xml  texas_greenroom_loop_corrected.xml  texas_willow_hallway_loop.xml  texas_willow_hallway_loop_corrected.xml
libamcl/: CMakeLists.txt  package.xml
libamcl/include/amcl/sensors/: amcl_fiducial.h
libamcl/src/amcl/sensors/: amcl_fiducial.cc  amcl_laser.cpp
